--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 </head>
 <body>
   <header>
-    <p>description</p>
+    <div class="header-city">
+      <p>Санкт-Петербург</p>
+    </div>
+    <div class="header-link">
+      <a href="#">Запись на курс</a>
+    </div>
+    <nav class="main-nav"></nav>
   </header>
   <h1>Cust dev!</h1>
   <script src="./index.js"></script>
