add preview section

--- a/index.html
+++ b/index.html
@@ -13,11 +13,16 @@
       <p>Санкт-Петербург</p>
     </div>
     <div class="header-link">
-      <a href="#">Запись на курс</a>
+      <button>Записаться</button>
     </div>
     <nav class="main-nav"></nav>
+    <section class="preview">
+      <p class="preview__data">Санкт-Петербург 10-21 мая</p>
+      <p class="preview__title">Начни делать Customer Development и проверять гипотезы</p>
+      <p class="preview__description">На оффлайн курсе из 5 воркшопов</p>
+      <button class="btn preview__btn">Записаться</button>
+    </section>
   </header>
-  <h1>Cust dev!</h1>
   <script src="./index.js"></script>
 </body>
 </html>
